Added haskell and java tools

--- a/index.html
+++ b/index.html
@@ -78,15 +78,43 @@
                 <cite>Node</cite>
             </a>
 
+            <a class="extension" target="_blank" href="https://marketplace.visualstudio.com/items?itemName=bierner.lit-html">
+                <img src="icons/lit-html.png">
+                <label>lit-html</label>
+                <cite>VSCode</cite>
+            </a>
+
         </section>
 
         <section>
             <h1>Haskell</h1>
 
+            <a class="tool" target="_blank" href="https://www.haskell.org/downloads/">
+                <img src="icons/haskell.png">
+                <label>GHCup</label>
+            </a>
+
+            <a class="extension" target="_blank" href="https://marketplace.visualstudio.com/items?itemName=haskell.haskell">
+                <img src="icons/haskell-extension.png">
+                <label>Haskell</label>
+                <cite>VSCode</cite>
+            </a>
+
         </section>
 
         <section>
             <h1>Java</h1>
+
+            <a class="tool" target="_blank" href="https://www.oracle.com/java/technologies/downloads/">
+                <img src="icons/java.png">
+                <label>Java SDK</label>
+            </a>
+
+            <a class="extension" target="_blank" href="https://marketplace.visualstudio.com/items?itemName=vscjava.vscode-java-pack">
+                <img src="icons/java-extension.png">
+                <label>Java</label>
+                <cite>VSCode</cite>
+            </a>
 
         </section>
 
