Added Python tools

--- a/index.html
+++ b/index.html
@@ -118,6 +118,22 @@
 
         </section>
 
+        <section>
+            <h1>Python</h1>
+
+            <a class="tool" target="_blank" href="https://www.python.org/downloads/">
+                <img src="icons/python.png">
+                <label>Python SDK</label>
+            </a>
+
+            <a class="extension" target="_blank" href="https://marketplace.visualstudio.com/items?itemName=ms-python.python">
+                <img src="icons/python.png">
+                <label>Python</label>
+                <cite>VSCode</cite>
+            </a>
+
+        </section>
+
     </main>
 </body>
 </html>
